Interpreter/Examples/bad/example3.jam
/* Using undeclared function */
main {
    print(f(1));
}
